Minor edits and capitalization and use for guest shell, guestshell, Guest Shell

--- a/labs/linux_at_the_edge/1.md
+++ b/labs/linux_at_the_edge/1.md
@@ -3,10 +3,10 @@
 ## Objective
 Completion Time: 20 Minutes
 
-- What is Guest Shell and Why do I care? 
-- Setup Guest Shell on IOS XE and NX-OS
-- Running Linux Apps and Utilities 
-- Platform and Software Support for Guest Shell
+- What is a guest shell and why do I care? 
+- Setup the guest shell on IOS XE and NX-OS
+- Running Linux apps and utilities 
+- Platform and software support for the guest shell
 
 # Prerequisites
 To prepare your computer for this lab, click the "How to Set Up Your Computer" link at the top of this lab.
@@ -14,8 +14,7 @@ To prepare your computer for this lab, click the "How to Set Up Your Computer" l
 
 ## Enabling Guest Shell
 
-In this lab we will look how to enable guest shell and some of the features that can be enabled.
-Guest shell on IOS XE and NX-OS slighly varies.
+In this lab, learn how to enable guest shell and some of the features that can be enabled. Guest shell enablement on IOS XE and NX-OS slighly varies.
 
 
 ![](/posts/files/linux_at_the_edge/images/enable_guest_shell.jpg)
@@ -23,18 +22,19 @@ Guest shell on IOS XE and NX-OS slighly varies.
 
 ## IOx
 
-IOx facilitates the life-cyclemanagement of app and data exchangeby providinga set of services that helpsdevelopersto packagepre-built apps, and host them on a target device. IOx life-cycle management includes distribution, deployment, hosting,starting,stopping(management), and monitoring of apps and data. IOx servicesalso include app distribution and management tools that help users discoverand deploy apps to the IOx framework.
+IOx facilitates the lifecycle management of app and data exchange by providing a set of services that helps developers package pre-built apps, and host them on a target device. IOx lifecycle management includes distribution, deployment, hosting, starting, stopping, and monitoring of apps and data. IOx services also include app distribution and management tools that help users discover and deploy apps to the IOx framework.
 
-App hostingprovidesthe followingfeatures:
+App hosting provides the following features:
 
-- Hides networkheterogeneity
-- IOx application programminginterfaces(APIs),remotelymanagethe life cycle of applicationshostedon a device
-- Centralizedapp life-cyclemanagement.•Cloud-baseddeveloperexperience.
+- Hides network heterogeneity
+- IOx application programming interfaces (APIs),remotely manage the lifecycle of applications hosted on a device
+- Centralized app lifecycle management
+- Cloud-based developer experience
 
 ## Getting Started
 
-This lab will be using the Devolper Sandbox, using the ssh command line utility.
-Once connected via software VPN the developer can access the lab's devices using the following:
+This lab uses a Developer Sandbox, using the `ssh` command line utility.
+Once connected via software VPN, you can access the lab's devices using the following:
 
 ## CSRV1000V Credentials and Information:
 - Username: cisco
@@ -48,9 +48,9 @@ Enter configuration commands, one per line.  End with CNTL/Z.
 device-xe(config)#iox
 device-xe(config)#exit
 ```
-IOx takes upto two minutesto start. CAF, IOXman,and Libirtd services must be running to enable GuestShell successfully (IOx service (HA) may not run)
+IOx takes up to two minutes to start. CAF, IOXman,and Libirtd services must be running to enable GuestShell successfully. (IOx service (HA) may not run without those services.)
 
-Once this as been enabled we can view this - the 'show iox-service' command will display the status of the IOx service.
+Once you enable IOx you can use the `show iox-service` command to display the status of the IOx service.
 
 ```
 device-xe#sh iox-service
