--- a/labs/linux_at_the_edge/2.md
+++ b/labs/linux_at_the_edge/2.md
@@ -1,9 +1,8 @@
 ## Setting up the Guest Shell
 
-Start by creating a virtual port group (VPG) which enters virtual port group interface configuration mode. This is only Valid on 
-routing platforms only and ussed to provide network connectivity to Guest Shell container.
+Start by creating a virtual port group (VPG) which enters virtual port group interface configuration mode. This mode is only valid on routing platforms and we use it to provide network connectivity to the guest shell container.
 
-Enter the configuration terminal and create a Virtual Port Group. When using Virtual Port Groups (VPGs) for front panel networking, the VPG must beconfigured first. We give this an IP address and subnet mask as we would any other type of interface.
+Enter the configuration terminal and create a Virtual Port Group. When using Virtual Port Groups (VPGs) for front-panel networking, the VPG must be configured first. We give this an IP address and subnet mask as we would any other type of interface.
 
 ```
 device-xe#conf t
@@ -13,10 +12,10 @@ device-xe(config-if)#  ip add 192.168.35.1 255.255.255.0
 device-xe(config-if)#  no shut
 device-xe(config-if)#  exit
 ```
-Next we creat a NAT entry (configuration valid on routing platforms only) This is used to NAT traffic from the Guest Shell off box
-For example this could be used to access Internet resources.
 
-Note: Inbound access to Guest Shell requires additional NAT, an alternative to NAT is route to VirtualPortGroup address space
+Next we create a NAT entry (configuration valid on routing platforms only). This entry is used to NAT traffic from the guest shell off-box. For example, use the NAT entry to access Internet resources.
+
+*Note*: Inbound access to the guest shell requires additional NAT. An alternative to NAT is to route to the VirtualPortGroup address space.
 
 ```
 device-xe(config)#interface VirtualPortGroup0
@@ -33,11 +32,12 @@ device-xe(config)#ip nat inside source list NAT_ACL interface GigabitEthernet1 o
 
 ## Enable Guest Shell
 
-VirtualPortGroup (VPG) and IP only needed on routing platforms.
-When starting the guestshell, you need to specify the IP address it will use. It is also recommended to determine the nameserver. 
+On routing platforms, you need VirtualPortGroup (VPG) and IP only.
+
+When starting the guest shell, you need to specify the IP address it will use. It is also recommended to determine the nameserver. 
 This is all done from 'enable' mode and not the configuration mode.
 
-*Note*: The guestshell enable command without any arguments uses the management virtual routing and forwarding (VRF) instance for networking.
+*Note*: The `guestshell enable` command without any arguments uses the management virtual routing and forwarding (VRF) instance for networking.
 
 ```
 device-xe#guestshell enable VirtualPortGroup 0 guest-ip 192.168.35.2 name-server 208.67.222.222
@@ -45,7 +45,7 @@ Please wait for completion
 Guestshell enabled successfully
 ```
 
-We can run the 'show app-hosting list', this displays a list of app-hosting services enabled on the device.
+We can run the `show app-hosting list` command to display a list of app-hosting services enabled on the device.
 
 ```
 device-xe# show app-hosting list
@@ -54,16 +54,19 @@ App id                           State
 ------------------------------------------
 guestshell                       RUNNING
 ```
-## Disabling the Guest Shell 
+
+## Disabling the Guest Shell
+
 ```
 guestshell disable
 ```
-The 'guestshell disable' command shuts down and disables Guest Shell. When Guest Shell is disabled and the system is reloaded, 
-Guest Shell remains disabled.
+
+The `guestshell disable` command shuts down and disables the guest shell. The guest shell remains disabled when the system is reloaded, and you must re-enable it.
 
 ## Destroying the Guest Shell
+
 ```
 guestshell destroy
 ```
-The 'guestshell destroy' command removes the rootfs from the flash filesystem. If you decide to re-enable the container in future, 
-the system will build it as a new one with default configuration.
+
+The `guestshell destroy` command removes the rootfs from the flash file system. If you decide to re-enable the guest shell container, the system builds a new one with default configuration.
