--- a/labs/linux_at_the_edge/4.md
+++ b/labs/linux_at_the_edge/4.md
@@ -1,10 +1,8 @@
 ## Accessing the CLI from the Guest Shell
 
-From the bash you can run Cisco CLI commands vai the 'dohost' command built into Guest Shell, the 'dohost' application accepts any 
-valid configuration exec commands and issues them to the host network element. The dohost' is limited to exec privilege commands.
+From the bash you can run Cisco CLI commands with the `dohost` command built into the guest shell. The `dohost` application accepts any valid configuration exec commands and issues them to the host network element. The `dohost` prefix is limited to exec privilege commands.
 
-The following example shows the usage of the dohost command, when invoking the 'dohost' command each 
-command may be in single or double quote. Here we issue a command to show the status of our routers interfaces and check our logs using the pipe charater to see if we have any logs for DCHP.
+The following example shows the usage of the `dohost` command. When invoking `dohost`, each command may be in single (') or double quotes ("). Here we issue a command to show the status of our routers interfaces and check our logs using the pipe character (|) to see if we have any logs for DCHP.
 
 
 ```
@@ -21,9 +19,9 @@ VirtualPortGroup0      192.168.35.1    YES manual up                    up
 *Dec 25 18:51:09.796: %DHCP-6-ADDRESS_ASSIGN: Interface GigabitEthernet1 assigned DHCP address 10.0.2.15, mask 255.255.255.0, hostname iosxe1
 ```
 
-The CLI commands can also be chained togther using the pipe charater as you can see above.
+The CLI commands can also be chained togther using the pipe character as shown.
 
-Lets add some add some loopback interfaces from the guestshell, check the router logs and confirm these have been applied.
+Next, add some add some loopback interfaces from the guestshell, check the router logs, and confirm these have been applied.
 
 ```
 [guestshell@guestshell ~]$for x in {1..3}; do dohost "conf t ; interface l$x ; ip address 10.1.0.$x 255.255.255.255" ; done
@@ -42,11 +40,11 @@ Loopback2              10.1.0.2        YES manual up                    up
 Loopback3              10.1.0.3        YES manual up                    up
 ```
 
-# Installing Applications within Guest Shell
+# Installing Applications within the Guest Shell
 
 ![](/posts/files/linux_at_the_edge/images/install_yum_git.jpg)
 
-Here is an example of installation of an rpm using yum. Go ahead and install the GIT application to our router, To double-check that it is working correctly, try running Git's built-in version check.
+Here is an example of installation of an rpm using Yum. Install the Git application to our router using Yum. Then, double-check that it is working correctly by running Git's built-in version check.
 
 ```
 [guestshell@guestshell ~]$ sudo yum install git
@@ -94,7 +92,7 @@ Complete!
 git version 1.8.3.1
 ````
 
-If a package is already installed, when you try and installed this you will be prompted that this is already installed.
+If a package is already installed, the system prompts you that the package is already installed.
 
 ```
 [guestshell@guestshell ~]$ sudo yum install git
