--- a/labs/linux_at_the_edge/5.md
+++ b/labs/linux_at_the_edge/5.md
@@ -1,17 +1,16 @@
-## Installing and running Applications
+## Installing and Running Applications
 
-Running troubleshooting commands from the guest shell.
-From the GuestShell you can install applcations and utilities to diagnose network issues.
+Running troubleshooting commands from the guest shell works well to make sure everything is working correctly. From the guest shell you can install applications and utilities to diagnose network issues.
 
-- MTR – Combines ping and traceroute. 
+- MTR – Combines ping and traceroute 
 - tcpdump – Well known Linux packet analyzer
 - Custom Python Applications
 - Launch Guest Shell apps from Embedded Event Manager applets
 
-Now install mtr via yum, note you have to be at 'root' level to be able to install this. Once
+Now install mtr with Yum. Note you have to be at the `root` directory level to be able to install this.
 
 ```
-[guestshell@guestshell ~]$ sudo yum install mtr
+[guest shell@guest shell ~]$ sudo yum install mtr
 Loaded plugins: fastestmirror
 Loading mirror speeds from cached hostfile
  * base: mirrors.coreix.net
@@ -52,9 +51,9 @@ Installed:
 Complete!
 ```
 ```
-[guestshell@guestshell ~]$sudo mtr 8.8.8.8
+[guest shell@guest shell ~]$sudo mtr 8.8.8.8
                                                        	My traceroute  [v0.85]
-guestshell (0.0.0.0)                                                                                          Thu Dec 21 10:45:04 2017
+guest shell (0.0.0.0)                                                                                          Thu Dec 21 10:45:04 2017
 Resolver error: No error returned but no answers given. of fields   quit
                                                                                               Packets               Pings
  Host                                                                                       Loss%   Snt   Last   Avg  Best  Wrst StDev
@@ -74,6 +73,6 @@ Resolver error: No error returned but no answers given. of fields   quit
  
 ## Summing it up
 
-In this lab, you looked at GuestShell and how GuestShell is a virtualized Linux-based environment and how this is enabled within the XE platform. You also saw how we can run our favorite Cisco IOS commands within the GuestShell and you also installed and looked some of the applications you can run from te GuestShell such as MTR, tcpdump.  
+In this lab, you looked at guest shell and how guest shell is a virtualized Linux-based environment and how this is enabled within the XE platform. You also saw how we can run our favorite Cisco IOS commands within the guest shell and you also installed and looked some of the applications you can run from te guest shell such as MTR, tcpdump.
 
-In the next lab we will look at how GuestShell is designed to run custom Linux applications, including Python for automated control and how you can also update and operate third-party Linux applications on Cisco IOX-XE platforms from within GuestShell.
+In the next lab we will look at how guest shell is designed to run custom Linux applications, including Python for automated control and how you can also update and operate third-party Linux applications on Cisco IOX-XE platforms from within guest shell.
