--- a/labs/linux_at_the_edge/3.md
+++ b/labs/linux_at_the_edge/3.md
@@ -1,9 +1,9 @@
-## Accessing and Using Guest Shell
+## Accessing and Using the Guest Shell
 
-Now we have enabled the Guest Shell we can access your guestshell and sudo to root permissions. 
-Linux commands can be run directly from the IOS CLI 
+Now you have enabled the guest shell, you can access your guest shell and sudo commands for root permissions. Linux commands can be run directly from the IOS CLI.
 
-The 'guestshell run' executes or runs a Linux programin the Guest Shell
+The `guestshell run` prefix executes or runs a Linux program in the guest shell.
+
 ```
 guestshellrun *linux-executable*
 ```
@@ -11,16 +11,15 @@ guestshellrun *linux-executable*
 ```
 device-xe#guestshell run ?
   LINE  Linux executable command string, eg: bash, python
-
 device-xe#guestshell run
 device-xe#guestshell run pwd
 /home/guestshell
 ```
-Here we can run bash, the following starts a Bash shell to access the GuestShell. From here we can run bash commands such as 'ls' (list) and ping.
+
+Here we can run bash. The following example starts a Bash shell to access the guest shell. From here we can run bash commands such as `ls` (list) and `ping`.
 
 ```
 device-xe#guestshell run bash
-
 [guestshell@guestshell ~]$ ls -l
 total 0
 [guestshell@guestshell ~]$ ping 8.8.8.8
@@ -32,8 +31,8 @@ PING 8.8.8.8 (8.8.8.8) 56(84) bytes of data.
 3 packets transmitted, 2 received, 33% packet loss, time 2008ms
 rtt min/avg/max/mdev = 70.108/70.345/70.583/0.356 ms
 [guestshell@guestshell ~]$
-
 ```
+
 The following example displays system statistics:
 
 ```
@@ -79,14 +78,16 @@ Hugepagesize:       2048 kB
 DirectMap4k:       15964 kB
 DirectMap2M:     8331264 kB
 ```
-The Linux environment can be customized by editing .bashrc or .bash_profile
 
-- DNS resolution within Guest Shell independent of host platform
-- IOS XE configures name-server within guestshell enable
-- NX-OS must explicitly configure within /etc/resolv.conf
+The Linux environment can be customized with .bashrc or .bash_profile files.
+
+- DNS resolution within the guest shell, independent of host platform
+- IOS XE configures name-server within `guestshell enable`
+- NX-OS must explicitly be configured within `/etc/resolv.conf`
 - Any required proxies must be configured on both IOS XE and NX-OS
 
-This is how you would configured a DNS configuration for Guest Shell:
+This is how you would configure a DNS configuration for the guest shell:
+
 ```
 [guestshell@guestshell~]$ cat/etc/resolv.conf
 nameserver 192.0.2.1
