Copy edits for Python at the Edge

--- a/labs/python_at_the_edge/1.md
+++ b/labs/python_at_the_edge/1.md
@@ -1,4 +1,4 @@
-# Python at the Edge: Super Charged Network Event Management 
+# Python at the Edge: Super Charged Network Event Management
 
 ## Objective
 Completion Time: 20 Minutes
@@ -15,9 +15,9 @@ Please ensure you have completed Linux at the Edge: Introduction to Guest Shell 
 
 ## Cisco Guest Shell Capabilities
 
-Guestshell is a virtualized Linux-based environment,designed to run custom Linux applications,including Python for automated control and management of Cisco devices.Using GuestShell, users can also install update,and operatethird-party Linux applications. Guest Shell containeris managed using IOx. IOx is Cisco's Application Hosting Infrastructure for Cisco IOSXE devices.IOx enables hosting of applications and services developed by Cisco, partners,and third-party developers in network edge devices.
+Guest shell is a virtualized Linux-based environment, designed to run custom Linux applications including Python for automated control and management of Cisco devices. Using guest shell, users can also install, update, and operate third-party Linux applications. The guest shell container is managed using IOx. IOx is Cisco's Application Hosting Infrastructure for Cisco IOS XE devices. IOx enables hosting of applications and services developed by Cisco, partners, and third-party developers in network edge devices.
 
-The below table shows the Guest Shell capabilitiesand the supported Cisco platforms
+The below table shows the guest shell capabilities and the supported Cisco platforms.
 
 ![](/posts/files/python_at_the_edge/images/guest_shell_cap.jpg)
 
@@ -30,13 +30,13 @@ The below table shows the Guest Shell capabilitiesand the supported Cisco platfo
 
 ## Guest Shell Setup
 
-Setting up the GuestShell with guest-ip enabled and configured with DNS is done via the following from the routers command line, note this is done from Privileged EXEC mode and not global configuration mode. Here we shall use the Guestshell enable command, create a virtual port group (VPG) and added a DNS name-server. 
+To set up the guest shell with `guest-ip` enabled and configured with DNS, use the following command. Note this is done from Privileged EXEC mode and not global configuration mode. Here we use the `guestshell enable` command, create a virtual port group (VPG), and add a DNS name-server.
 
 ```
 device-xe#guestshell enable virtualPortGroup 0 guest-ip 192.168.35.2 name-server 208.67.222.222
 ```
 
-Next we can install “GIT” within GuestShell (if you enabled this in the Linux at the egde lab skip this and confirm git is installed with git version command)
+Next we can install `git` within the guest shell. (If you already installed `git` in the Linux at the Edge lab, skip this step and confirm git is installed with the `git version` command.)
 
 
 ```
@@ -80,7 +80,7 @@ Installed:
 
 Complete!
 ```
-If a package is already installed, when you try and installed this you will be prompted that this is already installed.
+If a package is already installed, you see a prompt that the package is already installed.
 
 ```
 [guestshell@guestshell ~]$ sudo yum install git
@@ -93,7 +93,7 @@ Package git-1.8.3.1-12.el7_4.x86_64 already installed and latest version
 Nothing to do
 ```
 
-Then, clone the code repo for the lab
+Then, clone the code repo for the lab in the guest shell.
 
 ```
 [guestshell@guestshell ~]$ git clone https://github.com/CiscoDevNet/app_hosting_code_samples
