--- a/labs/python_at_the_edge/3.md
+++ b/labs/python_at_the_edge/3.md
@@ -1,8 +1,8 @@
 ## Installing and Running Python Libraries
 
-When installing python libraries in GuestShell they are instaled in the same way you would normally install a python libary using pip (package manager). Here lets enter the bash shell access to the guestshell and install requests (http://docs.python-requests.org/en/master/)
+When installing Python libraries in the guest shell, they are installed in the same way you would normally install a Python library using `pip` (Python package manager). Here let's enter the bash shell access to the guest shell and install requests (http://docs.python-requests.org/en/master/)
 
-Start a Bash shell to access the GuestShell and from root install requests.
+Start a Bash shell to access the guest shell and from the root directory, install `requests`.
 
 ```
 device-xe#guestshell run bash
@@ -64,7 +64,7 @@ GigabitEthernet3       unassigned      YES NVRAM  administratively down down
 VirtualPortGroup0      192.168.35.1    YES NVRAM  up                    up
 ```
 
-We can also use python to build / configure our router and the validate the new configuration, here we will create a new loopback interface. Add a description, IP address and subnet mask. We will then valite this new configuration. 
+We can also use python to build / configure our router and the validate the new configuration, here we will create a new loopback interface. Add a description, IP address and subnet mask. We will then valite this new configuration.
 
 ```
 >>> cli.configurep(["int loop100", "desc Python Loop", "ip add 192.168.0.1 255.255.255.0"])
@@ -103,4 +103,3 @@ When the new device is switched on, it retrieves the IP address information of t
 
 
 After receiving these DHCP options,the device connects to the HTTP/TFTP server, and downloads the Python script. The device,at this point does not have any route to reach the HTTP/TFTPserver, so it uses the default route provided by the DHCP server.
-
