--- a/labs/python_at_the_edge/4.md
+++ b/labs/python_at_the_edge/4.md
@@ -1,14 +1,11 @@
 # Embedded Event Manager
 
-Embedded Event Manager (EEM) policies supports Python scripts. You can register Python scripts as EEM policies, and execute the registered  Python scripts when a corresponding event occurs. The EEM Python script has the same event specification syntax as the EEM TCL policy.
+Embedded Event Manager (EEM) policies support Python scripts. You can register Python scripts as EEM policies, and execute the registered  Python scripts when a corresponding event occurs. The EEM Python script has the same event specification syntax as the EEM TCL (Tool Command Language) policy.
 
-Configured EEM policies run within the Guest Shell. Guest Shell is a virtualized Linux-based environment, 
-designed to run custom Linux applications, including Python for automated control and management of Cisco devices. 
-The Guest Shell container provides a Python interpreter.
-
+Configured EEM policies run within the guest shell using the included Python interpreter.
 
 ## Python-Supported EEM Actions
-The Python package (is available only within the EEM script, and not available for the standard Python script) supports the following EEM actions:
+The Python package is available only within the EEM script, and not available for the standard Python script. It supports the following EEM actions:
 
 - Syslog message printing
 - Send SNMP traps
@@ -19,9 +16,9 @@ The Python package (is available only within the EEM script, and not available f
 - Track Object Set
 - Cisco Networking Services event generation
 
-- Configure the event manager applet to run a Python script in response to the event.
+Next, configure the event manager applet to run a Python script in response to an event.
 
-Here we create an event called 'interface_Lo100_Shutdown' from the router command line to trigger an event. This then has a regular expression to perform the syslog message pattern match. We have to specify a directory to use for storing user library files or user-defined EEM policies. You must have a policy in the specified path. In the next step, the eem_script.py policy is available in the flash:/user_library folder or path. Then specify a regular expression pattern string that will match the next solicited prompt.
+Here we create an event called 'interface_Lo100_Shutdown' from the router command line to trigger an event. This event then has a regular expression to perform the syslog message pattern match. We have to specify a directory to use for storing user library files or user-defined EEM policies. You must have a policy in the specified path. In the next step, the `eem_script.py` policy is available in the flash:/user_library folder or path. Then specify a regular expression pattern string that will match the next solicited prompt.
 
 ```
 device-xe(config)#event manager applet interface_Lo100_Shutdown
@@ -31,7 +28,7 @@ device-xe(config-applet)#action 1.0 cli command "guestshell run python /flash/ap
 device-xe(config-applet)#exit
 
 ```
-- Manually trigger the event from the CLI, but shutting down interface loopback 100 we build via the command line. 
+Now, manually trigger the event from the CLI, but when shutting down interface loopback 100, we build this series of actions in the command line.
 
 ```
 !Enable terminal monitor
@@ -44,7 +41,8 @@ device-xe(config)#int lo100
 device-xe(config-if)#shut
 
 ```
-Here the Python script eem_intf_up.py is triggered due to us shutting the loopback 100 interface being shutdown. The Python script will be executed and the interface will be 'no shut' and its state changed to up.
+
+Here the Python script `eem_intf_up.py` is triggered due to us shutting the loopback 100 interface. The Python script executes and the interface shows 'no shut' plus its state changed to 'up'.
 
 ```
 *Dec 21 12:32:57.843: %LINEPROTO-5-UPDOWN: Line protocol on Interface Loopback100, changed state to down
@@ -63,12 +61,10 @@ Here the Python script eem_intf_up.py is triggered due to us shutting the loopba
 *Dec 21 12:32:59.577:
 *Dec 21 12:32:59.577: tty is now going through its death sequence
 *Dec 21 20:45:01.541: %LINEPROTO-5-UPDOWN: Line protocol on Interface Loopback100, changed state to up
-*Dec 21 20:45:01.542: %LINK-3-UPDOWN: Interface Loopback100, changed state to 
+*Dec 21 20:45:01.542: %LINK-3-UPDOWN: Interface Loopback100, changed state to
 ```
 
 ## Summing it up
 
-In this lab we looked at what was required to enable us to run python scripts within the GuestShell, how we can use the Python interpreter and some of the features within the Python interpreter. Within the Python interpreter how we look and confirm the routers configuration and even add new configurations. We looked at Zero-Touch Provisioning, which enables a device to retrieve configuration files from a remote DHCP server during initial deployment with no end-user intervention. Finally we configured Embedded Event Manager 
-(EEM) policies and saw the support Python scripts.
-
-
+In this lab we looked at what was required to enable us to run Python scripts within the guest shell, how we can use the Python interpreter and some of the features within the Python interpreter. Within the Python interpreter we confirmed the routers configuration and even add new configurations. We looked at Zero-Touch Provisioning, which enables a device to retrieve configuration files from a remote DHCP server during initial deployment with no end-user intervention. Finally we configured Embedded Event Manager
+(EEM) policies and saw the supporting Python scripts.
