--- a/labs/python_at_the_edge/2.md
+++ b/labs/python_at_the_edge/2.md
@@ -1,21 +1,21 @@
 # Using Python for Network Programming
 
-Python can be used interactively or Python scripts can be run in the Guest Shell. Use the guest shell run python command to launch the Python interpreter in Guest Shell and open the Python terminal.
+Python can be used interactively or Python scripts can be run in the guest shell. Use the `guestshell run python` command to launch the Python interpreter in the guest shell and open the Python terminal.
 
 The following table defines the difference between 'On' and 'Off' box python.
 
-![](/posts/files/python_at_the_edge/images/python_on_off_box.jpg) 
+![](/posts/files/python_at_the_edge/images/python_on_off_box.jpg)
 
 ## On-Box Python Features in IOS XE and NX-OS
 - Interactive Python prompt
 - Run Python scripts directly on box
 - Includes a Cisco Python API library for interacting with host device
 - Integration with Day Zero Deployment (ZTP) and PowerOn Auto Provisioning (POAP)
-- Call Python Scripts with Embedded Event Manager (EEM)
+- Call Python scripts with Embedded Event Manager (EEM)
 
 ## Interactive Python Prompt
 
-At the enable prompt run `guestshell run python` command and test the Python interpreter.
+At the enabled prompt run `guestshell run python` command and test the Python interpreter.
 
 ```
 device-xe#guestshell run python
@@ -28,7 +28,7 @@ hello world
 >>>
 ```
 
-Now lets run some Python. The Python interactive mode allows us to execute Python functions from the Cisco Python CLI module to configure the device. Here will have Python issue a 'show route' command.
+Now, run some Python. The Python interactive mode allows us to execute Python functions from the Cisco Python CLI module to configure the device. For example, have Python issue a 'show route' command.
 
 ```
 [guestshell@guestshell ~]$ python
@@ -45,8 +45,7 @@ Routing entry for 0.0.0.0/0, supernet
   * 10.10.10.254, via GigabitEthernet1
       Route metric is 0, traffic share count is 1
 ```
+
 ## Python Script
 
-Python scripts can run in non-interactive mode by providing the Python script name as an argument in the Python command. Python scripts must be accessible from within the Guest Shell. To access Python scripts from the Guest Shell, save the scripts in bootflash/flash that is mounted within the Guest Shell.
-
-
+Python scripts can run in non-interactive mode by providing the Python script name as an argument in the Python command. Python scripts must be accessible from within the guest shell. To access Python scripts from the guest shell, save the scripts in bootflash or flash that is mounted within the guest shell.
