updated last paragraph with example

--- a/labs/python_at_the_edge/2.md
+++ b/labs/python_at_the_edge/2.md
@@ -48,4 +48,10 @@ Routing entry for 0.0.0.0/0, supernet
 
 ## Python Script
 
-Python scripts can run in non-interactive mode by providing the Python script name as an argument in the Python command. Python scripts must be accessible from within the guest shell. To access Python scripts from the guest shell, save the scripts in bootflash or flash that is mounted within the guest shell.
+Python scripts can run in non-interactive mode by providing the Python script name as an argument in the Python command. Python scripts must be accessible from within the guest shell. To access Python scripts from the guest shell, save the scripts in bootflash or flash that is mounted within the guest shell. 
+
+To run a Python script from the Guest Shell, execute the guestshell run python /flash/script.py command at the device command prompt. The following example shows how to run a Python script from the guest Shell:
+
+```
+device-xe# guestshell run python /flash/eem_intf_up.py lo100
+```
