added sandbox url

--- a/labs/linux_at_the_edge/1.md
+++ b/labs/linux_at_the_edge/1.md
@@ -33,7 +33,7 @@ App hosting provides the following features:
 
 ## Getting Started
 
-This lab uses a Developer Sandbox, using the `ssh` command line utility.
+This lab uses a Developer [DevNet Sandbox](https://devnetsandbox.cisco.com/RM/Diagram/Index/1b83c4bf-f63e-4e4b-9119-9b385751f1b6?diagramType=Topology), using the `ssh` command line utility.
 Once connected via software VPN, you can access the lab's devices using the following:
 
 ## CSRV1000V Credentials and Information:
