updated the clone git to be in cd /flash

--- a/labs/python_at_the_edge/1.md
+++ b/labs/python_at_the_edge/1.md
@@ -93,9 +93,11 @@ Package git-1.8.3.1-12.el7_4.x86_64 already installed and latest version
 Nothing to do
 ```
 
-Then, clone the code repo for the lab in the guest shell.
+Then, change directory to bootflash/flash and clone the code repo for the lab in the guest shell.
 
 ```
+[guestshell@guestshell ~]$ cd /flash
+[guestshell@guestshell flash]$
 [guestshell@guestshell ~]$ git clone https://github.com/CiscoDevNet/app_hosting_code_samples
 Cloning into 'app_hosting_code_samples'...
 remote: Counting objects: 445, done.
