--- a/labs/python_at_the_edge/1.md
+++ b/labs/python_at_the_edge/1.md
@@ -98,13 +98,13 @@ Then, change directory to bootflash/flash and clone the code repo for the lab in
 ```
 [guestshell@guestshell ~]$ cd /flash
 [guestshell@guestshell flash]$
-[guestshell@guestshell ~]$ git clone https://github.com/CiscoDevNet/app_hosting_code_samples
+[guestshell@guestshell flash]]$ git clone https://github.com/CiscoDevNet/app_hosting_code_samples
 Cloning into 'app_hosting_code_samples'...
 remote: Counting objects: 445, done.
 remote: Total 445 (delta 0), reused 0 (delta 0), pack-reused 445
 Receiving objects: 100% (445/445), 120.74 KiB | 0 bytes/s, done.
 Resolving deltas: 100% (196/196), done.
-[guestshell@guestshell ~]$ ls
+[guestshell@guestshell flash]$ ls
 app_hosting_code_samples
 
 ```
