--- a/labs/python_at_the_edge/1.md
+++ b/labs/python_at_the_edge/1.md
@@ -104,7 +104,7 @@ remote: Counting objects: 445, done.
 remote: Total 445 (delta 0), reused 0 (delta 0), pack-reused 445
 Receiving objects: 100% (445/445), 120.74 KiB | 0 bytes/s, done.
 Resolving deltas: 100% (196/196), done.
-[guestshell@guestshell flash]$ ls
+[guestshell@guestshell flash]$ ls | grep app_hosting_code_samples
 app_hosting_code_samples
 
 ```
