added text to Python Script

--- a/labs/python_at_the_edge/2.md
+++ b/labs/python_at_the_edge/2.md
@@ -55,3 +55,4 @@ To run a Python script from the Guest Shell, execute the guestshell run python /
 ```
 device-xe# guestshell run python /flash/eem_intf_up.py lo100
 ```
+We will use this in the next section.
