updated run python syntax

--- a/labs/python_at_the_edge/2.md
+++ b/labs/python_at_the_edge/2.md
@@ -53,6 +53,6 @@ Python scripts can run in non-interactive mode by providing the Python script na
 To run a Python script from the Guest Shell, execute the guestshell run python /flash/script.py command at the device command prompt. The following example shows how to run a Python script from the guest Shell:
 
 ```
-device-xe# guestshell run python /flash/eem_intf_up.py lo100
+device-xe# guestshell run python /flash/app_hosting_code_samples/python_onbox/eem_intf_up.py lo100
 ```
 We will use this in the next section.
