added ssh /putty link

--- a/labs/linux_at_the_edge/1.md
+++ b/labs/linux_at_the_edge/1.md
@@ -33,7 +33,7 @@ App hosting provides the following features:
 
 ## Getting Started
 
-This lab uses a Developer [DevNet Sandbox](https://devnetsandbox.cisco.com/RM/Diagram/Index/1b83c4bf-f63e-4e4b-9119-9b385751f1b6?diagramType=Topology), using the `ssh` command line utility.
+This lab uses a Developer [DevNet Sandbox](https://devnetsandbox.cisco.com/RM/Diagram/Index/1b83c4bf-f63e-4e4b-9119-9b385751f1b6?diagramType=Topology), using the `ssh` command line utility. Using Mac/Linux directly use the OS native SSH client. For connecting using Windows use a SSH client such as [PuTTY](https://www.chiark.greenend.org.uk/~sgtatham/putty/latest.html)
 Once connected via software VPN, you can access the lab's devices using the following:
 
 ## CSRV1000V Credentials and Information:
@@ -44,6 +44,8 @@ Enter the configuration terminal mode and enable iox.
 
 ```
 device-xe#conf t
+
+
 Enter configuration commands, one per line.  End with CNTL/Z.
 device-xe(config)#iox
 device-xe(config)#exit
