added cat 9000 info

--- a/labs/linux_at_the_edge/2.md
+++ b/labs/linux_at_the_edge/2.md
@@ -1,6 +1,6 @@
 ## Setting up the Guest Shell
 
-Start by creating a virtual port group (VPG) which enters virtual port group interface configuration mode. This mode is only valid on routing platforms and we use it to provide network connectivity to the guest shell container.
+Start by creating a virtual port group (VPG) which enters virtual port group interface configuration mode. This mode is only valid on routing platforms and we use it to provide network connectivity to the guest shell container. On switching platforms, like the Catalyst 9000 access to the guest shell is done by bridging the Management port
 
 Enter the configuration terminal and create a Virtual Port Group. When using Virtual Port Groups (VPGs) for front-panel networking, the VPG must be configured first. We give this an IP address and subnet mask as we would any other type of interface.
 
