Change from learning.cisco.com to developer.cisco.com/learning

--- a/labs/linx_at_the_edge/1.md
+++ b/labs/linx_at_the_edge/1.md
@@ -9,7 +9,7 @@ Completion Time: 20 Minutes
 - Platform and software support for the guest shell
 
 # Prerequisites
-To prepare your computer for this lab, click the "How to Set Up Your Computer" link at the top of this lab. Please ensure you have completed [Cloud to Fog… Why Host Apps in the Network](https://learninglabs.cisco.com/modules/net_app_hosting/cloud_to_fog/step/1) lab beforehand.
+To prepare your computer for this lab, click the "How to Set Up Your Computer" link at the top of this lab. Please ensure you have completed [Cloud to Fog… Why Host Apps in the Network](https://developer.cisco.com/learning/modules/net_app_hosting/cloud_to_fog/step/1) lab beforehand.
 
 
 ## Enabling Guest Shell
