--- a/labs/python_at_the_Edge/1.md
+++ b/labs/python_at_the_Edge/1.md
@@ -11,7 +11,7 @@ Completion Time: 20 Minutes
 
 # Prerequisites
 To prepare your computer for this lab, click the "How to Set Up Your Computer" link at the top of this lab.
-Please ensure you have completed [Linux at the Edge: Introduction to Guest Shell](https://learninglabs.cisco.com/modules/net_app_hosting/linx_at_the_edge/step/1) lab beforehand.
+Please ensure you have completed [Linux at the Edge: Introduction to Guest Shell](https://developer.cisco.com/learning/modules/net_app_hosting/linx_at_the_edge/step/1) lab beforehand.
 
 ## Cisco Guest Shell Capabilities
 
